新增大盘统计接口！
